# voice_inline_bot

./: .gitignore  README.md  __main__.py  pyproject.toml
handlers/admin/: __init__.py  voice.py
handlers/user/: __init__.py  basic.py  inline.py
migrations/: env.py
migrations/versions/: 9f8ae9dfc7a0_.py
sql/: models.py  repo.py  test.db
states/: voice_states.py
utils/: __init__.py  utils.py
